Fix SVG hit testing when padding is present https://bugs.webkit.org/show_bug.cgi?id=37325

Patch by Philip Rogers <pdr@google.com> on 2011-11-15
Reviewed by Nikolas Zimmermann.

Source/WebCore:

Test: svg/hittest/svg-padding.xhtml

* rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::nodeAtPoint):

LayoutTests:

* svg/hittest/svg-padding-expected.txt: Added.
* svg/hittest/svg-padding.xhtml: Added.

Canonical link: https://commits.webkit.org/88828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100280 268f45cc-cd09-0410-ab3c-d52691b4dbfc